test/classes/jplevyak/record_type_hierarchy-3-error.good
_chpl_adomain.chpl:10: fwrite, f : file, val : _domain
_chpl_adomain.chpl:143: fwrite, f : file, x : _aarray
_chpl_adomain.chpl:86: fwrite, f : file, x : _adomain
_chpl_adomain.chpl:93: fwrite, f : file, val : _aarray_info
_chpl_base.chpl:11: fwrite, f : file, val : _setterTokenType
_chpl_base.chpl:3: fwrite, f : file, val : _unused_class
_chpl_base.chpl:9: fwrite, f : file, val : _methodTokenType
_chpl_closure.chpl:1: fwrite, f : file, val : closure
_chpl_complex.chpl:8: fwrite, f : file, x : complex
_chpl_data.chpl:46: fwrite, f : file, val : _fdata
_chpl_file.chpl:112: fwrite, f : file, val : int64
_chpl_file.chpl:145: fwrite, f : file, val : float64
_chpl_file.chpl:165: fwrite, f : file, val : string
_chpl_file.chpl:196: fwrite, f : file, val : bool
_chpl_file.chpl:1: fwrite, f : file, val : file
_chpl_file.chpl:214: fwrite, f : file, x : nil_type
_chpl_htuple.chpl:22: fwrite, f : file, val : _htuple
_chpl_seq.chpl:156: fwrite, f : file, s : seq
_chpl_seq.chpl:1: fwrite, f : file, val : _seqNode
_chpl_seq.chpl:236: fwrite, f : file, s : _aseq
error: '_tmp' has no type
fail: program does not type
fwrite, f : file, val : _tuple2
fwrite, f : file, val : _tuple2
note: candidates are:
note: candidates are:
prelude.chpl:10: fwrite, f : file, val : _ddata
prelude.chpl:30: fwrite, f : file, val : CFILEPTR
prelude.chpl:3: fwrite, f : file, val : object
prelude.chpl:4: fwrite, f : file, val : value
record_type_hierarchy-3-error.chpl:10: f, a : D
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: illegal call argument type '_tmp' illegal: ( ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'b' illegal: ( C ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'stdout' illegal: ( file ) 
record_type_hierarchy-3-error.chpl:16: unresolved call 'f'
record_type_hierarchy-3-error.chpl:16: unresolved call 'fwrite'
record_type_hierarchy-3-error.chpl:1: fwrite, f : file, val : C
record_type_hierarchy-3-error.chpl:5: fwrite, f : file, val : D
